# Sketch-Animation-App

./: CMakeLists.txt  README.md  Readme  main.cpp
ext/glad/include/glad/: glad.h
ext/glfw/: GLFW.cbp  Makefile  cmake_install.cmake  cmake_uninstall.cmake
ext/glfw/src/: Makefile  cmake_install.cmake
ext/imgui/: README.md  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw_gl3.cpp  imgui_impl_glfw_gl3.h  imgui_internal.h
ext/imgui/glfw/: imgui_impl_glfw_gl3.cpp
res/: fshader.frag  vshader.vert
src/: Arrow.h  Canvas.h  Doodle.h  Motion.h  Node.h  Object.h  Rectangle.h  ShadersUtil.h  SketchWin.h
